--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
 </nav>
 
 <div class="hero">
-    <h1>Le Convertisseur Tout-en-Un</h1>
-    <p>PDF, Word et Images transformés instantanément sans PHP.</p>
+    <h1>Le Convertisseur Tout-en-Un By Nkalaa</h1>
+    <p>PDF, Word et Images transformés instantanément </p>
 </div>
 
 <div class="container">
@@ -62,10 +62,7 @@
                     <optgroup label="Images">
                         <option value="jpg">Vers Image (.jpg)</option>
                     </optgroup>
-					<optgroup label="Présentations">
-        <option value="pptx">Vers PowerPoint (.pptx)</option>
-        <option value="pdf">Vers PDF (.pdf)</option>
-    </optgroup>
+					
                 </select>
                 <button type="submit" class="btn-submit" id="submitBtn">Convertir maintenant</button>
             </div>
@@ -131,3 +128,5 @@
 </script>
 </body>
 </html>
+
+
