--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
 
 <nav class="main-nav">
     <a href="/" class="active"><i class="fa fa-sync"></i> NKONVERT</a>
-    <a href="/boost"><i class="fa fa-lightbulb"></i> BOOST</a>
+    <a href="/boost"><i class="fa fa-lightbulb"></i>Motivation</a>
     <a href="/zip"><i class="fa fa-file-zipper"></i> ZIP TOOL</a>
 </nav>
 
@@ -106,6 +106,7 @@
                     </optgroup>
                     <optgroup label="Images">
                         <option value="jpg">Vers Image (.jpg)</option>
+                        <option value="png">Vers Image (.png)</option>
                     </optgroup>
                 </select>
                 <button type="submit" class="btn-submit" id="submitBtn">Convertir maintenant</button>
@@ -179,3 +180,4 @@
 </script>
 </body>
 </html>
+
