--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
 <nav class="main-nav">
     <a href="/" class="active"><i class="fa fa-sync"></i> NKONVERT</a>
     <a href="/boost"><i class="fa fa-lightbulb"></i>Motivation</a>
-    <a href="/zip"><i class="fa fa-file-zipper"></i> ZIP TOOL</a>
+    <a href="/zip"><i class="fa fa-file-zipper"></i> Compresser Zip</a>
 </nav>
 
 <div class="hero">
@@ -180,4 +180,5 @@
 </script>
 </body>
 </html>
+
 
