--- a/templates/motivation.html
+++ b/templates/motivation.html
@@ -137,7 +137,7 @@
 <nav class="main-nav">
     <a href="/"><i class="fa fa-file-export"></i> NKONVERT</a>
     <a href="/boost" class="active"><i class="fa fa-bolt"></i> BOOST SPIRIT</a>
-    <a href="/zip"><i class="fa fa-file-zipper"></i> ZIP TOOL</a>
+    <a href="/zip"><i class="fa fa-file-zipper"></i> Compression ZIP</a>
 </nav>
 
 <div class="container">
@@ -229,5 +229,6 @@
 </html>
 </body>
 </html>
+
 
 
